fixed 1px offset/clipping on border (re #4972)

--- a/core/src/zeit/imp/browser/resources/imp.css
+++ b/core/src/zeit/imp/browser/resources/imp.css
@@ -27,7 +27,7 @@
 }
 
 #imp-image {
-  border: 1px solid black;
+  border: none;
 }
 
 #imp-loading-image {
